@@ -1735,13 +1735,12 @@ GEN
 rnfconductor(GEN bnf, GEN T)
 {
   pari_sp av = avma;
-  GEN D, nf, module, bnr, H, dT;
+  GEN D, nf, module, bnr, H;
   ulong lim;
 
   bnf = checkbnf(bnf); nf = bnf_get_nf(bnf);
-  T = check_polrel_monic(nf, T, &lim);
-  dT = Q_denom( RgX_to_nfX(nf, T) );
-  if (!is_pm1(dT)) T = RgX_rescale(T, dT);
+  T = check_polrel(nf, T, &lim);
+  T = nfX_to_monic(nf, T, NULL);
   if (!lim)
     D = rnfdisc_factored(nf, T, NULL);
   else
