@@ -8,7 +8,7 @@ Help: rnfconductor(bnf,T): conductor of the Abelian extension
  structure, and subgroup the HNF defining the norm
  group (Artin or Takagi group) on the given generators bnr.gen.
 Doc: given a \var{bnf} structure attached to a number field $K$, as produced
- by \kbd{bnfinit}, and $T$ a monic irreducible polynomial in $K[x]$
+ by \kbd{bnfinit}, and $T$ an irreducible polynomial in $K[x]$
  defining an \idx{Abelian extension} $L = K[x]/(T)$, computes the class field
  theory conductor of this Abelian extension. The result is a 3-component vector
  $[\var{conductor},\var{bnr},\var{subgroup}]$, where \var{conductor} is
