@@ -2109,6 +2109,7 @@ GEN     nf_to_Fq(GEN nf, GEN x, GEN modpr);
 GEN     nfM_to_FqM(GEN z, GEN nf,GEN modpr);
 GEN     nfV_to_FqV(GEN z, GEN nf,GEN modpr);
 GEN     nfX_to_FqX(GEN x, GEN nf,GEN modpr);
+GEN     nfX_to_monic(GEN nf, GEN T, GEN *pL);
 GEN     nfbasis(GEN x, GEN *y,GEN p);
 GEN     nfcompositum(GEN nf, GEN A, GEN B, long flag);
 void    nfmaxord(nfmaxord_t *S, GEN T, long flag);
